# usb-creator

./: .gitignore  CMakeLists.txt  README.md  WUWWjg.json  creator.cpp  creator.h  creator.pro  creator.ui  customipeditor.h  customlineedit.h  default.nix  deviceenumerator.h  deviceenumerator_linux.cpp  deviceenumerator_linux.h  deviceenumerator_macos.cpp  deviceenumerator_macos.h  deviceenumerator_unix.cpp  deviceenumerator_unix.h  deviceenumerator_windows.cpp  deviceenumerator_windows.h  diskwriter.cpp  diskwriter.h  diskwriter_unix.cpp  diskwriter_unix.h  diskwriter_windows.cpp  diskwriter_windows.h  downloadmanager.cpp  downloadmanager.h  jsonparser.cpp  jsonparser.h  linux_build.sh  linux_clean.sh  main.cpp  movingaverage.cpp  movingaverage.h  osx_build.sh  osx_clean.sh  osx_make_dmg.sh  osx_sign.sh  osx_sign_dmg.sh  (+15 more)
dmg_osx/: main.scpt.txt
dmg_osx/template.app/Contents/: Info.plist
dmg_osx/template.app/Contents/MacOS/: askPass.js
dmg_osx/template.app/Contents/Resources/: applet.icns
dmg_osx/template.app/Contents/Resources/Scripts/: main.scpt
lang/: lang-de_DE.po  lang-de_DE.ts  lang-en_US.po  lang-en_US.ts  lang-es_ES.po  lang-es_ES.ts  lang-fr_FR.po  lang-fr_FR.ts  lang-zh_CN.po  lang-zh_CN.ts
libs/: README.md
libs/quazip/: CMakeLists.txt  JlCompress.cpp  JlCompress.h  ioapi.h  qioapi.cpp  quachecksum32.cpp  quazip.cpp  quazip.h  quazip.pro  quazip_global.h  quazipfile.cpp  quazipfile.h  quazipfileinfo.h  quazipnewinfo.cpp  quazipnewinfo.h  unzip.c  unzip.h  zip.c  zip.h
libs/sha256crypt/: sha256crypt.c  sha256crypt.h
nix/: build.nix  build_translations.sh  builder.sh
